--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #818cf8;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #a5b4fc;
 }
 
 body {
@@ -44,7 +44,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #818cf8;
 }
 button:focus,
 button:focus-visible {
@@ -57,7 +57,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #4338ca;
   }
   button {
     background-color: #f9f9f9;
